force-app/main/default/objects/Module_Access__c/Module_Access__c.object-meta.xml
<CustomObject>
    <label>Module Access</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Module Access Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Module Accesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>