force-app/main/default/objects/Module_Access__c/fields/Module_Provided__c.field-meta.xml
<CustomField>
    <fullName>Module_Provided__c</fullName>
    <label>Module Provided</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales &amp; Service with All</fullName>
            </value>
            <value>
                <fullName>Service with Part</fullName>
            </value>
            <value>
                <fullName>Service with Work</fullName>
            </value>
            <value>
                <fullName>Service with Schedule</fullName>
            </value>
            <value>
                <fullName>Service with Time Management</fullName>
            </value>
            <value>
                <fullName>Sales and Service with Part</fullName>
            </value>
            <value>
                <fullName>Sales and Service with Work</fullName>
            </value>
            <value>
                <fullName>Sales and Service with Schedule</fullName>
            </value>
            <value>
                <fullName>Sales and Service with Time Management</fullName>
            </value>
            <value>
                <fullName>Sales Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>