force-app/main/default/objects/Module_Access__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Module_Provided__c</columns>
    <columns>Org_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>